snap/tests/ui/not_json_serializable.stderr
error[E0277]: the trait bound `for<'de> NotSerializable: Deserialize<'de>` is not satisfied
    --> tests/ui/not_json_serializable.rs:7:5
     |
7    |     #[snapshot]
     |     ^^^^^^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `NotSerializable`
     |
     = help: the following other types implement trait `Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a str
               ()
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
             and $N others
     = note: required for `NotSerializable` to implement `DeserializeOwned`
note: required by a bound in `from_reader`
    --> C:/Users/Jonathan/.cargo/registry/src/index.crates.io-6f17d22bba15001f/serde_json-1.0.91/src/de.rs:2519:8
     |
2516 | pub fn from_reader<R, T>(rdr: R) -> Result<T>
     |        ----------- required by a bound in this function
...
2519 |     T: de::DeserializeOwned,
     |        ^^^^^^^^^^^^^^^^^^^^ required by this bound in `from_reader`
     = note: this error originates in the attribute macro `snapshot` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotSerializable: Serialize` is not satisfied
    --> tests/ui/not_json_serializable.rs:7:5
     |
7    |     #[snapshot]
     |     ^^^^^^^^^^^ the trait `Serialize` is not implemented for `NotSerializable`
     |
     = help: the following other types implement trait `Serialize`:
               &'a T
               &'a mut T
               ()
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
               (T0, T1, T2, T3, T4)
               (T0, T1, T2, T3, T4, T5)
             and $N others
note: required by a bound in `to_writer_pretty`
    --> C:/Users/Jonathan/.cargo/registry/src/index.crates.io-6f17d22bba15001f/serde_json-1.0.91/src/ser.rs:2094:17
     |
2091 | pub fn to_writer_pretty<W, T>(writer: W, value: &T) -> Result<()>
     |        ---------------- required by a bound in this function
...
2094 |     T: ?Sized + Serialize,
     |                 ^^^^^^^^^ required by this bound in `to_writer_pretty`
     = note: this error originates in the attribute macro `snapshot` (in Nightly builds, run with -Z macro-backtrace for more info)
